Bug 1560092 - Create decoder for encrypted h264 media even if an SPS is not found. r=jya

If an mp4 uses the AVC3 sample format then extra data will be stored in sample
data rather than in metadata. In encrypted streams the metadata is unencrypted
but samples are typically encrypted. If all samples are encrypted and the only
SPS data is in samples then the MediaChangeMonitor will never observe any SPS
data.

This updates the MediaChangeMonitor so that it will not try and inspect h264
content once encryption is detected and relies on the CDM to handle such
content.

Differential Revision: https://phabricator.services.mozilla.com/D37485